@@ -339,6 +339,9 @@
 
 	Fixed ":vs .." which used to use wrong base directory.
 
+	Fixed gU, gu and ignore case name sort on filenames with non-latin
+	characters.
+
 0.7.8-beta to 0.7.8
 
 	Added ga and gA keys to visual mode.  Thanks to geo909.
